Restructure project.